kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-deployment
  labels:
    app: landing-page
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: landing-page
  template: 
    metadata: 
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: vikasdfghjl/landing_page:latest
        ports:
        - containerPort: 3001
