kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 3002  # Port to access the service from outside the cluster
      targetPort: 3001  # Port your Node.js app listens on
  type: LoadBalancer  # Expose the service publicly using the load balancer (you can change it based on your needs)
