kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-svc
spec:
  selector:
    app: landing-page
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 30007
